# UNI-Projects-1st-Year

./: README.md
Trimester 1 - C++/: README.md
Trimester 1 - C++/Exercise 1/: CMakeLists.txt  vkn_01_02.cpp
Trimester 1 - C++/Exercise 10/: CMakeLists.txt  vkn_10_01.cpp
Trimester 1 - C++/Exercise 2/: CMakeLists.txt  vkn_02_02.cpp  vkn_02_03.cpp  vkn_02_04.cpp  vkn_02_05.cpp  vkn_02_06.cpp
Trimester 1 - C++/Exercise 3/: CMakeLists.txt  vkn_03_02.cpp
Trimester 1 - C++/Exercise 4/: CMakeLists.txt  vkn_04_02.cpp  vkn_04_03.cpp  vkn_04_04.cpp  vkn_04_05.cpp  vkn_04_06.cpp  vkn_04_07.cpp  vkn_04_08.cpp  vkn_04_09.cpp  vkn_04_10.cpp  vkn_04_11.cpp  vkn_04_12.cpp  vkn_04_13.cpp  vkn_04_14.cpp  vkn_04_15.cpp  vkn_04_16.cpp
Trimester 1 - C++/Exercise 5/: CMakeLists.txt  vkn_05_02.cpp  vkn_05_03.cpp  vkn_05_04.cpp  vkn_05_05.cpp  vkn_05_06.cpp  vkn_05_07.cpp  vkn_05_08.cpp  vkn_05_09.cpp  vkn_05_10.cpp  vkn_05_11.cpp  vkn_05_12.cpp  vkn_05_13.cpp  vkn_05_14.cpp  vkn_05_15.cpp  vkn_05_16.cpp  vkn_05_17.cpp  vkn_05_18.cpp  vkn_05_19.cpp  vkn_05_20.cpp  vkn_05_21.cpp  vkn_05_22.cpp  vkn_05_23.cpp  vkn_05_24.cpp  vkn_05_25.cpp  vkn_05_26.cpp  vkn_05_27.cpp
Trimester 1 - C++/Exercise 6/: CMakeLists.txt  vkn_06_02.cpp  vkn_06_03.cpp
Trimester 1 - C++/Exercise 7/: CMakeLists.txt  vkn_07_02.cpp
Trimester 1 - C++/Exercise 8/: CMakeLists.txt  vkn_08_02.cpp
Trimester 2 - C++/: README.md
Trimester 2 - C++/Exercise 01/: CMakeLists.txt  progr_01_01.cpp  progr_01_02.cpp  progr_01_03.cpp  progr_01_04.cpp  progr_01_05.cpp  progr_01_06.cpp  progr_01_07.cpp  progr_01_08.cpp  progr_01_09.cpp  progr_01_10.cpp  progr_01_11.cpp  progr_01_12.cpp  progr_01_13.cpp  progr_01_14.cpp
Trimester 2 - C++/Exercise 02/: CMakeLists.txt  progr_02_01.cpp  progr_02_02.cpp  progr_02_03.cpp  progr_02_04.cpp  progr_02_05.cpp  progr_02_06.cpp  progr_02_07.cpp  progr_02_08.cpp  progr_02_09.cpp  progr_02_10.cpp  progr_02_11.cpp  progr_02_12.cpp  progr_02_13.cpp  progr_02_14.cpp  progr_02_15.cpp  progr_02_16.cpp  progr_02_17.cpp  progr_02_18.cpp  progr_02_19.cpp
Trimester 2 - C++/Exercise 03/: CMakeLists.txt  progr_03_01.cpp  progr_03_02.cpp  progr_03_03.cpp  progr_03_04.cpp  progr_03_05.cpp  progr_03_06.cpp  progr_03_07.cpp  progr_03_08.cpp  progr_03_09.cpp  progr_03_10.cpp  progr_03_11.cpp  progr_03_12.cpp  progr_03_13.cpp  progr_03_14.cpp  progr_03_15.cpp  progr_03_16.cpp  progr_03_17.cpp  progr_03_18.cpp
Trimester 2 - C++/Exercise 06/: CMakeLists.txt  progr_06_01.cpp  progr_06_02.cpp  progr_06_03.cpp  progr_06_04.cpp  progr_06_05.cpp  progr_06_06.cpp  progr_06_07.cpp  progr_06_08.cpp  progr_06_09.cpp  progr_06_10.cpp  progr_06_11.cpp
Trimester 2 - C++/Exercise 07/: CMakeLists.txt  progr_07_01.cpp  progr_07_02.cpp  progr_07_03.cpp  progr_07_04.cpp  progr_07_05.cpp  progr_07_06.cpp  progr_07_07.cpp  progr_07_08.cpp  progr_07_09.cpp  progr_07_10.cpp  progr_07_11.cpp  progr_07_12.cpp  progr_07_13.cpp
Trimester 2 - C++/Exercise 08/: CMakeLists.txt  progr_08_01.cpp  progr_08_02.cpp  progr_08_03.cpp  progr_08_04.cpp  progr_08_05.cpp  progr_08_06.cpp  progr_08_07.cpp  progr_08_08.cpp  progr_08_09.cpp  progr_08_10.cpp  progr_08_11.cpp  progr_08_12.cpp  progr_08_13.cpp  progr_08_14.cpp  progr_08_15.cpp  progr_08_16.cpp  progr_08_17.cpp  progr_08_18.cpp  progr_08_19.cpp  progr_08_20.cpp
Trimester 3 - Java/: README.md
(+114 files in other folders)
