cmake_minimum_required(VERSION 3.21)
project(Exercise_01)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_01
        progr_01_01.cpp
        progr_01_02.cpp
        progr_01_03.cpp
        progr_01_04.cpp
        progr_01_05.cpp
        progr_01_06.cpp
        progr_01_07.cpp
        progr_01_08.cpp
        progr_01_09.cpp
        progr_01_10.cpp
        progr_01_11.cpp
        progr_01_12.cpp
        progr_01_13.cpp
        progr_01_14.cpp)
