cmake_minimum_required(VERSION 3.21)
project(Exercise_02)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_02
        progr_02_01.cpp
        progr_02_02.cpp
        progr_02_03.cpp
        progr_02_04.cpp
        progr_02_05.cpp
        progr_02_06.cpp
        progr_02_07.cpp
        progr_02_08.cpp
        progr_02_09.cpp
        progr_02_10.cpp
        progr_02_11.cpp
        progr_02_12.cpp
        progr_02_13.cpp
        progr_02_14.cpp
        progr_02_15.cpp
        progr_02_16.cpp
        progr_02_17.cpp
        progr_02_18.cpp
        progr_02_19.cpp)
