cmake_minimum_required(VERSION 3.21)
project(Exercise_03)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_03
        progr_03_01.cpp
        progr_03_02.cpp
        progr_03_03.cpp
        progr_03_04.cpp
        progr_03_05.cpp
        progr_03_06.cpp
        progr_03_07.cpp
        progr_03_08.cpp
        progr_03_09.cpp
        progr_03_10.cpp
        progr_03_11.cpp
        progr_03_12.cpp
        progr_03_13.cpp
        progr_03_14.cpp
        progr_03_15.cpp
        progr_03_16.cpp
        progr_03_17.cpp
        progr_03_18.cpp)
