cmake_minimum_required(VERSION 3.21)
project(Exercise_06)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_06
        progr_06_01.cpp
        progr_06_02.cpp
        progr_06_03.cpp
        progr_06_04.cpp
        progr_06_05.cpp
        progr_06_06.cpp
        progr_06_07.cpp
        progr_06_08.cpp
        progr_06_09.cpp
        progr_06_10.cpp
        progr_06_11.cpp)
