cmake_minimum_required(VERSION 3.21)
project(Exercise_07)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_07
        progr_07_01.cpp
        progr_07_02.cpp
        progr_07_03.cpp
        progr_07_04.cpp
        progr_07_05.cpp
        progr_07_06.cpp
        progr_07_07.cpp
        progr_07_08.cpp
        progr_07_09.cpp
        progr_07_10.cpp
        progr_07_11.cpp
        progr_07_12.cpp
        progr_07_13.cpp)
