cmake_minimum_required(VERSION 3.21)
project(Exercise_08)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_08
        progr_08_01.cpp
        progr_08_02.cpp
        progr_08_03.cpp
        progr_08_04.cpp
        progr_08_05.cpp
        progr_08_06.cpp
        progr_08_07.cpp
        progr_08_08.cpp
        progr_08_09.cpp
        progr_08_10.cpp
        progr_08_11.cpp
        progr_08_12.cpp
        progr_08_13.cpp
        progr_08_14.cpp
        progr_08_15.cpp
        progr_08_16.cpp
        progr_08_17.cpp
        progr_08_18.cpp
        progr_08_19.cpp
        progr_08_20.cpp)
